; $Id$ 
===================
Changelog for Arrange Fields
===================

6-21-2010
 Added support for userreference and nodereference, as well as the File
 widget, and Date module's widgets.


6-20-2010
 Added preliminary support for Webform in addition to CCK.  Also, fixed a bug
 where the CSS and JS were not being re-added if the form failed validation.
 

6-13-2010
 Fixed a display bug where the wrong CSS ID was being used with fieldsets.
 Also, changed the menu hooks so they better integrate with CCK.


6-12-2010 : Initial creation of project on drupal.org.