@@ -9,6 +9,16 @@
  *
  */
 function arrange_fields_install() {
-  db_query("UPDATE {system} SET weight = 50 WHERE name = 'arrange_fields'");
+  db_query("UPDATE {system} SET weight = 500 WHERE name = 'arrange_fields'");
 }
 
+
+/**
+ * The main thing we want to do here is up the weight to a higher number.  Before
+ * now, the weight was set to 50.  But, in order for this module to work with vertical
+ * tabs (whose weight is 300), the weight needs to be higher.
+ *
+ */
+function arrange_fields_update_6100() {
+  db_query("UPDATE {system} SET weight = 500 WHERE name = 'arrange_fields'");
+}
