@@ -54,3 +54,7 @@
   padding: 2px;
   min-width: 50px;
 }
+
+.arrange-fields-container #arrange-fields-vertical-tabs {
+  width: 98%;
+}
