@@ -3,10 +3,19 @@
 Changelog for Arrange Fields
 ===================
 
+
 6-21-2010
  Added support for userreference and nodereference, as well as the File
  widget, and Date module's widgets.
+ 
+ Because of a bug introduced when you can have resizable textfields inside
+ of a fieldset, I disabled having resizable textfields inside of a fieldset.
+ 
+ Fixed a bug where CAPTCHA's buttons were not showing up correctly.
 
+ Made it so that vertical tabs works, by upping the weight of the module
+ in the system table, as well as a few code changes.
+ 
 
 6-20-2010
  Added preliminary support for Webform in addition to CCK.  Also, fixed a bug
